# audio-streaming-poc

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
backend/: requirements.txt
backend/api/: main.py
backend/services/: asr_service.py  mt_service.py  tts_service.py  turn_taking.py
backend/services/vad/: __init__.py  vad_service.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: AudioRecorder.tsx  ConversationSession.tsx
frontend/src/lib/: useWebSocket.ts
